--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@ th, td {
 <table style="width:100%">
 <tr>
 <td>ripe</td>
-<td><img src="ripe.jpg"></td>
+<td><img src="img/ripe.jpg"></td>
 
 </tr>
 <tr>
 <td>under ripe</td>
-<td><img src="notripe.jpg"></td>
+<td><img src="img/notripe.jpg"></td>
 
 </tr>
 <tr>
 <td> over ripe</td>
-<td><img src="overripe.jpg"</td>
+<td><img src="img/overripe.jpg"</td>
 
 </tr>
 
